[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/sprites/sheep.png" type="Texture" id=1]
[ext_resource path="res://Characters/Sheep.gd" type="Script" id=2]
[ext_resource path="res://Characters/outline_shader.tres" type="Material" id=3]
[ext_resource path="res://Characters/HealthBar.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 46.0
height = 24.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
resource_name = "walk"
length = 1.2
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.4, 13, 14.5, -0.2, -17.9514, 0.0999835, 8.97421, 0, -0.2, 13, 0.2, -11, -14.5, -0.25, 0, 0.2, 11.5, 0, -0.0773151, 0.679018, 0, 0 ),
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2 )
}

[sub_resource type="Animation" id=4]
resource_name = "Damage"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 218.002

[node name="Sheep" type="KinematicBody2D" groups=["Sheep", "sheep"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8, 1 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
method_call_mode = 1
anims/RESET = SubResource( 2 )
anims/walk = SubResource( 3 )

[node name="Stuck" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="HealthBar" parent="." instance=ExtResource( 4 )]
visible = false

[node name="HealthTimer" type="Timer" parent="HealthBar"]

[node name="DamagePlayer" type="AnimationPlayer" parent="."]
anims/Damage = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="Vision" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
shape = SubResource( 6 )

[connection signal="timeout" from="Stuck" to="." method="_on_Stuck_timeout"]
[connection signal="timeout" from="HealthBar/HealthTimer" to="." method="_on_HealthTimer_timeout"]
[connection signal="animation_finished" from="DamagePlayer" to="." method="_on_DamagePlayer_animation_finished"]
[connection signal="body_entered" from="Vision" to="." method="_on_Vision_body_entered"]
